--- a/grupo-a.html
+++ b/grupo-a.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Grupo A | Encuentros 4° Medios</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style-groups.css">
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <link rel="icon" href="assets/imagens/favicon.png" type="image/x-icon" />
     <script type="text/javascript" src="assets/js/script.js"></script>
