--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <img id="userPhoto" src="assets/img/logo-unach-fin.jpg" alt="UNACH">
 
-    <spam id="userName">@uadventista</spam>
+    <spam id="userName">@unach.cl</spam>
     <spam id="userName">Encuentros 4° Medios</spam>
 
     <div id="links">
@@ -30,16 +30,19 @@
     </div>
 
     <div class="footer">
-        <a href="https://instagram.com/uadventista" target="_blank">
+        <a href="https://instagram.com/unach.cl" target="_blank">
             <i style="line-height: 38px;" class="fa fa-instagram circulo" aria-hidden="true"></i>
         </a>
-        <a href="https://www.facebook.com/uadventista" target="_blank">
+        <a href="https://www.facebook.com/unach.cl" target="_blank">
             <i style="line-height: 38px;" class="fa fa-facebook-f circulo" aria-hidden="true"></i>
+        </a>
+        <a href="https://github.com/uadventista" target="_blank">
+            <i style="line-height: 38px;" class="fa fa-github circulo" aria-hidden="true"></i>
         </a>
         <a href="https://www.linkedin.com/school/uadventista" target="_blank">
             <i style="line-height: 38px;" class="fa fa-linkedin circulo" aria-hidden="true"></i>
         </a>
-        <a href="https://www.youtube.com/unachenvivo" target="_blank">
+        <a href="https://www.youtube.com/universidadadventistadechile" target="_blank">
             <i style="line-height: 38px;" class="fa fa-youtube circulo" aria-hidden="true"></i>
         </a>
     </div>
