--- a/grupo-b.html
+++ b/grupo-b.html
@@ -15,7 +15,7 @@
 <body>
     <i onclick="mostrar(this)" class="fa fa-moon-o fa-2x night_mode"></i>
 
-    <img id="userPhoto" src="assets/img/A.jpg" alt="Grupo A">
+    <img id="userPhoto" src="assets/img/B.jpg" alt="Grupo B">
 
     <spam id="userName">Grupo B</spam>
 
